// Vitest Snapshot v1

exports[`atoms::Buttons > renders error button 1`] = `
<DocumentFragment>
  <button
    class="mantine-Button-filled mantine-Button-root mantine-b4sl6"
    type="button"
  >
    <div
      class="mantine-3xbgk5 mantine-Button-inner"
    >
      <span
        class="mantine-qo1k2 mantine-Button-label"
      >
        Error
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`atoms::Buttons > renders neutral button 1`] = `
<DocumentFragment>
  <button
    class="mantine-Button-filled mantine-Button-root mantine-h60jl4"
    type="button"
  >
    <div
      class="mantine-3xbgk5 mantine-Button-inner"
    >
      <span
        class="mantine-qo1k2 mantine-Button-label"
      >
        Neutral
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`atoms::Buttons > renders primary button by default 1`] = `
<DocumentFragment>
  <button
    class="mantine-Button-filled mantine-Button-root mantine-11hawrf"
    type="button"
  >
    <div
      class="mantine-3xbgk5 mantine-Button-inner"
    >
      <span
        class="mantine-qo1k2 mantine-Button-label"
      >
        Primary
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`atoms::Buttons > renders success button 1`] = `
<DocumentFragment>
  <button
    class="mantine-Button-filled mantine-Button-root mantine-1wbcmdw"
    type="button"
  >
    <div
      class="mantine-3xbgk5 mantine-Button-inner"
    >
      <span
        class="mantine-qo1k2 mantine-Button-label"
      >
        Success
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`atoms::Buttons > renders text button 1`] = `
<DocumentFragment>
  <button
    class="mantine-UnstyledButton-root mantine-jxthji"
    type="button"
  >
    <span
      class="mantine-Text-root mantine-1xu8ypy"
    >
      This is a Text Button
    </span>
  </button>
</DocumentFragment>
`;
